manifest/unpackaged/objects/Course__c.object
<CustomObject>
    <description>Candidate Course that Exams are linked to</description>
    <fields>
        <fullName>Current_IDC__c</fullName>
        <description>Flag which denotes whether this is the current IDC.</description>
        <formula>IF (AND(TODAY() &gt;= Start_Date__c,  TODAY() &lt;= End_Date__c), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current IDC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Ens date of course</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date of course</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>